<resources>
    <string name="app_name">harmonicHyperspace</string>
    <string name="harmonic_hyperspace">Harmonic Hyperspace</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_google">sign up with Google</string>
    <string name="email">email     </string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="or">or</string>
    <string name="log_in">Log In</string>
    <string name="search">search</string>
    <string name="cancel">cancel</string>
    <string name="searchText">Search albulms, tracks, or artists</string>
    <string name="is_just_a_logo">is just a logo</string>
    <string name="albulms">albulms</string>
    <string name="artists">artists</string>
    <string name="tracks">Tracks</string>
    <string name="review_track">Review Track</string>
    <string name="track_name">Track Name</string>
    <string name="artist_track">artist * Track</string>
    <string name="publish">Publish</string>
    <string name="title">Title</string>
    <string name="review_score">0/5</string>
    <string name="review_date">04/12/2023</string>
    <string name="your_review_">Your review...</string>
    <string name="albulm_name">Albulm Name</string>
    <string name="albulm_artist">Albulm * Artist</string>
    <string name="review_albulm">Review Albulm</string>
    <string name="artist_name">Artist Name</string>
    <string name="top_albulms">Top Albulms</string>
    <string name="top_tracks">top tracks</string>
    <string name="profileAlbulmInfo">artist name * genre * release date</string>
    <string name="reviewInfo">total # of ratings * overall score</string>
    <string name="review">Review</string>
    <string name="top_ratings">top ratings</string>
    <string name="genresLogo">Genres</string>
    <string name="profileView"># reviews # ratings</string>
    <string name="editBtn">edit profile</string>
    <string name="recent_activity">recent activity</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="save">save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="information">information</string>
    <string name="change_picture">change picture</string>
    <string name="name">name</string>
    <string name="biography">biography</string>
    <string name="favorite_albums">favorite albums</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="album_name">album name\n</string>
    <string name="profileAlbumInfo">infoooooooooooo</string>
    <string name="bio">Bio</string>
    <string name="preview_image">Preview Image</string>
    <string name="save_image">Save Image</string>
    <string name="select_image">Select Image</string>
    <string name="edit_profile2">Edit Profile</string>
    <string name="Logout">Logout</string>
    <string name="Ban_Users">Ban Users</string>
    <string name="enter_username_to_ban">Enter username to ban</string>
    <string name="Confirm">Confirm</string>
</resources>