<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.searchResults">

    <EditText
        android:id="@+id/search"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginBottom="850dp"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="850dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albulmResults"
        android:layout_width="367dp"
        android:layout_height="176dp"
        app:layout_constraintBottom_toTopOf="@+id/trackResults"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackResults"
        android:layout_width="369dp"
        android:layout_height="188dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/artistResults"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artistResults"
        android:layout_width="367dp"
        android:layout_height="232dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/albulms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="320dp"
        android:text="@string/albulms"
        app:layout_constraintBottom_toTopOf="@+id/albulmResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <TextView
        android:id="@+id/tracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="320dp"
        android:text="@string/tracks"
        app:layout_constraintBottom_toTopOf="@+id/trackResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albulmResults" />

    <TextView
        android:id="@+id/artists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="320dp"
        android:text="@string/artists"
        app:layout_constraintBottom_toTopOf="@+id/artistResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackResults" />

</androidx.constraintlayout.widget.ConstraintLayout>